Mon Mar  5 09:16:40 2007  Minero Aoki  <aamine@loveruby.net>

	* lib/net/smtp.rb: support automatic STARTTLS.

	* lib/net/smtp.rb: check server advertisement.

	* lib/net/smtp.rb: introduce new class SMTP::Response.

	* lib/net/smtp.rb (getok): should not use sprintf.

	* lib/net/smtp.rb (get_response): ditto.

	* lib/net/protocol.rb: reduce syntax warning on 1.9.

Mon Mar  5 07:13:28 2007  Minero Aoki  <aamine@loveruby.net>

	* lib/net/smtp.rb: reconstruct SMTPS/STARTTLS interface.  New
	  interface is incompatible from current 1.9 interface at all.

	* lib/net/smtp.rb: All SSL-related class methods are removed; use
	  instance methods instead.

	* lib/net/smtp.rb: rename methods: *ssl -> *tls (with alias
	  "ssl").

	* lib/net/smtp.rb: rename methods: *tls -> *starttls.

Mon Mar  5 01:36:41 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex), win32/win32.c (rb_w32_utime): fixed
	  indentation broken at YARV merger.

Sun Mar  4 23:41:14 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_stat_uid, rb_stat_gid, eaccess): use rb_uid_t and
	  rb_gid_t instead of int.

	* file.c (rb_stat_s_utime): fixed a commit miss for the platforms
	  where utimes() does not exist.

	* lib/fileutils.rb (touch): ditto.

Sun Mar  4 14:46:56 2007  WATANABE Hirofumi  <eban@ruby-lang.org>

	* util.c (push_element): should return a int value.

Sun Mar  4 01:01:25 2007  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb (Set#^, Set#&): Correct documentation.  Those methods
	  return sets, not arrays; noted by Oliver Frank Wittich <nietz AT
	  mangabrain.de>.

Sat Mar  3 22:54:33 2007  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (touch): last #touch change causes error when
	  :mtime option was not given.

Sat Mar  3 22:51:29 2007  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (mv): could not move directory between
	  different file systems. [ruby-dev:30411]

Sat Mar  3 22:37:02 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>
