@@ -1,3 +1,13 @@
+Mon Mar  5 09:19:33 2007  Minero Aoki  <aamine@loveruby.net>
+
+	* lib/timeout.rb (Timeout.timeout): should return the block value
+	  always.
+
+	* lib/timeout.rb (Timeout.timeout): should yield sec argument
+	  always.
+
+	* lib/timeout.rb (Timeout.timeout): fix document.
+
 Mon Mar  5 09:16:40 2007  Minero Aoki  <aamine@loveruby.net>
 
 	* lib/net/smtp.rb: support automatic STARTTLS.
